Changes to models, minor enhancements

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             Release Pressure &amp; Seat<br/>Leakage Test
         </a>
 
-        <a href="#" class="btn btn-squared-default btn-default">
+        <a href="{{url_for('showBTSLValves')}}" class="btn btn-squared-default btn-default">
           <i class="fa fa-stethoscope fa-5x"></i><br/>
           Body <br/>and Leak Test
         </a>
