--- a/templates/btslValveCard.html
+++ b/templates/btslValveCard.html
@@ -1,4 +1,3 @@
-
 {%extends "layout/header.html"%}
 {% block title %}Valves{% endblock %}
 {% block content%}
@@ -8,9 +7,7 @@
 		<div class="col-lg-12">
 				<div class="alert alert-dismissible alert-info" style="display:none;" id="alert-box">
 				  <button type="button" class="close" data-dismiss="alert">&times;</button>
-				  <p id="message">
-
-				  </p>
+				  <p id="message"></p>
 				</div>
 			<div class="panel panel-primary">
 				<div class="panel-heading">
@@ -137,11 +134,11 @@
 											<div class="form-group">
 												<label class="col-md-3 control-label" for="buttondropdown">Set Pressure</label>
 												<div class="col-md-9">
-													<input id="setPressure" name="setPressure" class="input-sm form-control col-md-3" placeholder="" value="{{valveTechCard.setPressure}}" type="text" required="" disabled="disabled">
+													<input id="seatPressure" name="seatPressure" class="input-sm form-control col-md-3" placeholder="" value="{{valveTechCard.seatPressure}}" type="text" required="" disabled="disabled">
 													<select disabled="disabled" class="input-sm form-control">
 														<option value="-1">Select one</option>
-														<option value="mm" {%if valveTechCard.setPressureUnit=="bar"%}selected{%endif%}>bar</option>
-														<option value="in" {%if valveTechCard.setPressureUnit=="kgpercm2"%}selected{%endif%}>kg/cm<sup>2</sup></option>
+														<option value="mm" {%if valveTechCard.seatPressureUnit=="bar"%}selected{%endif%}>bar</option>
+														<option value="in" {%if valveTechCard.seatPressureUnit=="kgpercm2"%}selected{%endif%}>kg/cm<sup>2</sup></option>
 													</select>
 												</div>
 											</div>
@@ -230,7 +227,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="panel panel-primary">
+						{%if current_page=="valveCard"%}
+						<div class="panel panel-primary" id="releasePressurePanel">
 							<div class="panel-heading" role="tab" id="headingFour">
 								<h4 class="panel-title">
 									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
@@ -268,7 +266,48 @@
 								</div>
 							</div>
 						</div>
-						<div class="panel panel-primary">
+						{%elif current_page=="btslvalveCard"%}
+
+						<div class="panel panel-primary" id="bodyTestPanel">
+							<div class="panel-heading" role="tab" id="headingFour">
+								<h4 class="panel-title">
+									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+										Body Test
+									</a>
+								</h4>
+							</div>
+							<div id="collapseFour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingFour">
+								<div class="panel-body">
+									<form action="http://127.0.0.1:8001/EfcoDAQService/EfcoBackendService" method="GET" class="form-horizontal" name="releasePressureTest">
+										<div class="col-md-4">
+											<div class="form-group">
+												<label class="control-label">Tolerance[%]</label>
+												<input class="input-sm form-control" id="tolerance" />
+											</div>
+											<div class="form-group">
+												<label class="control-label">Test Duration[sec]</label>
+												<input class="input-sm form-control" id="testDuration" />
+											</div>
+										</div>
+										<div class="col-md-4">
+											<div class="form-group">
+												<label class="control-label">Nominal Pressure</label>
+												<input class="input-sm form-control" id="nominalPressure" />
+											</div>
+										</div>
+										<div class="col-md-4">
+											<div class="form-group">
+												<label class="control-label">Actual Pressure</label>
+												<input class="input-sm form-control" id="actualPressure" />
+											</div>
+										</div>
+
+									</form>
+								</div>
+							</div>
+						</div>
+						{%endif%}
+						<div class="panel panel-primary" id="seatLeakage" >
 							<div class="panel-heading" role="tab" id="headingFive">
 								<h4 class="panel-title">
 									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
@@ -279,7 +318,8 @@
 							<div id="collapseFive" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
 
 									<div class="panel-body">
-										<form action="#" method="GET" class="form-horizontal" name="releasePressureTest">
+										<form action="#" method="GET" class="form-horizontal" name="seatLeakageTest">
+											{%if current_page=="valveCard"%}
 											<div class="col-md-4">
 												<div class="form-group">
 													<label class="control-label">Time</label>
@@ -295,9 +335,29 @@
 										<div class="form-horizontal col-md-4">
 											<div class="form-group">
 												<label class="control-label">Final Pressure</label>
-												<input class="input-sm form-control" name="actualReleasePressure" id="finalPressure" disabled="disabled"/>
+												<input class="input-sm form-control" name="finalPressure" id="finalPressure" disabled="disabled"/>
 											</div>
 										</div>
+										{%elif current_page=="btslvalveCard"%}
+										<div class="col-md-4">
+											<div class="form-group">
+												<label class="control-label">Time</label>
+												<input class="input-sm form-control" id="time" />
+											</div>
+											<div class="form-group">
+												<label class="control-label">Test Pressure</label>
+												<input class="input-sm form-control" id="testPressure" />
+											</div>
+										</div>
+
+									</form>
+									<div class="form-horizontal col-md-4">
+										<div class="form-group">
+											<label class="control-label">Final Pressure</label>
+											<input class="input-sm form-control" name="finalPressure" id="finalPressure" disabled="disabled"/>
+										</div>
+									</div>
+									{%endif%}
 									</div>
 
 							</div>
@@ -325,20 +385,32 @@
 											<i class="fa fa-save fa-5x"></i><br/>
 											Save  <br/>Valve
 										</a>
+										{%if current_page=="valveCard"%}
 										<a href="#" class="btn valveOp-btn-squared-default btn-warning" id="startRPVI">
 											<i class="fa fa-plus fa-5x"></i><br/>
 											Start RP <br>Application
-										</a>
-										<a href="#" class="btn valveOp-btn-squared-default btn-warning" id="startSLVI">
-											<i class="fa fa-plus fa-5x"></i><br/>
-											Start SL <br>Application
 										</a>
 										<a href="#" class="btn valveOp-btn-squared-default btn-success" id="rpTest">
 											<i class="fa fa-plus fa-5x"></i><br/>
 											Release  <br/>Pressure
 										</a>
+										{%elif current_page=="btslvalveCard"%}
+										<a href="#" class="btn valveOp-btn-squared-default btn-warning" id="startBTVI">
+											<i class="fa fa-plus fa-5x"></i><br/>
+											Start BT <br>Application
+										</a>
+										<a href="#" class="btn valveOp-btn-squared-default btn-success" id="btTest">
+											<i class="fa fa-plus fa-5x"></i><br/>
+											Body <br/>Test
+										</a>
+										{%endif%}
+										<a href="#" class="btn valveOp-btn-squared-default btn-warning" id="startSLVI" style="display:none;">
+											<i class="fa fa-plus fa-5x"></i><br/>
+											Start SL <br>Application
+										</a>
 
-										<a href="#" class="btn valveOp-btn-squared-default btn-success" id="slTest">
+
+										<a href="#" class="btn valveOp-btn-squared-default btn-success" id="slTest" style="display:none;">
 											<i class="fa fa-plus fa-5x"></i><br/>
 											Seat  <br/>Leakage
 										</a>
