--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -32,14 +32,14 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="{{url_for('index')}}">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#faq">FAQ</a></li>
+            <!-- <li><a href="#about">About</a></li> -->
+            <li><a href="/faq">FAQ</a></li>
 
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-      
+
      <div class="content">
       {% block content %}{% endblock %}
      </div>
@@ -52,12 +52,15 @@
 
   <script type="text/javascript" src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
   <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
-  	{% if current_page=="valves"%}
+  	{% if current_page=="RPSLvalves" or current_page=="BTSLvalves"%}
 
 	<script type="text/javascript" src="{{url_for('static',filename='js/jquery.dataTables.min.js')}}"></script>
 	<script type="text/javascript" src="{{url_for('static',filename='js/dataTables.bootstrap.min.js')}}"></script>
 	<script type="text/javascript" src="{{url_for('static',filename='js/valves.js')}}"></script>
-    {% elif current_page=="valveCard"%}
+    {% elif current_page=="valveCard" or current_page=="btslvalveCard"%}
+		<link rel="stylesheet" href="{{url_for('static',filename='css/datetimepicker.css')}}" media="screen" title="no title" charset="utf-8">
+		<script type="text/javascript" src="{{url_for('static',filename='js/moment.js')}}"></script>
+		<script type="text/javascript" src="{{url_for('static',filename='js/datetimepicker.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static',filename='js/valveCard.js')}}"></script>
 	{% endif %}
 </body>
