--- a/templates/valves.html
+++ b/templates/valves.html
@@ -5,9 +5,7 @@
 <div class="container text-center">
 	<div class="alert alert-dismissible alert-info" style="display:none;" name="alert-box">
 		<button type="button" class="close" data-dismiss="alert">&times;</button>
-		<p name="message">
-
-		</p>
+		<p name="message"></p>
 	</div>
 	<div class="row">
 
@@ -16,7 +14,6 @@
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<h3 class="panel-title clearfix">Search Valves
-
 						<button type="button" name="deleteValve" id="deleteValve" class="btn-xs btn-danger pull-right">Delete Valve</button>
 						<button type="button" name="createValve" class="btn-xs btn-success pull-right" data-toggle="modal" data-target="#createModal">Create Valve</button>
 					</h3>
@@ -34,6 +31,7 @@
 								<td>Manufacturer</td>
 								<td>Manufacture Number</td>
 								<td>Show</td>
+								<td>Delete</td>
 							</tr>
 						</thead>
 						<tbody>
@@ -42,13 +40,14 @@
 							<tr>
 
 								<td>{{row['valve_id']}}</td>
-								<td>{{row['valve_type']}}</td>
+								<td>{%if row['valve_type']=="1"%}Safety Valve{%else%}Shut off{%endif%}</td>
 								<td>{{row['rev_no']}}</td>
 								<td>{{row['install_locations']}}</td>
 								<td>{{row['customer']}}</td>
 								<td>{{row['manufacturer']}}</td>
 								<td>{{row['manufacturer_no']}}</td>
-								<td><a href="/valve/{{row['valve_id']}}" class="btn-sm btn-info" style="text-decoration:none;"><i class="fa fa-check"></i>Show valve</a></td>
+								<td><a href="/{%if current_page=='RPSLvalves'%}rpslvalve{%elif current_page=='BTSLvalves'%}btslvalve{%endif%}/{{row['valve_id']}}" class="btn-sm btn-info" style="text-decoration:none;"><i class="fa fa-check"></i>Show valve</a></td>
+								<td><a href="/deleteValve/{{row['valve_id']}}/{{row['valve_type']}}" class="btn btn-xs btn-danger" onclick="return confirm('Are you sure you want to delete this item?');"><i class="fa fa-times"></i></a></td>
 							</tr>
 							{%endfor%}
 
@@ -93,8 +92,12 @@
 									<div class="form-group">
 										<label class="col-md-4 control-label" for="valve_type">Valve Type</label>
 										<div class="col-md-8">
-											<input name="valve_type" id="valve_type" type="text" placeholder="" class="form-control input-sm" required="">
 
+											<select name="valve_type" class="form-control" id="valve_type">
+												<option value="-1">Select type</option>
+												<option value="1" {%if current_page=="RPSLvalves"%}selected="selected"{%endif%}>Safety Valve</option>
+												<option value="2"{%if current_page=="BTSLvalves"%}selected="selected"{%endif%}>Shut off Valve</option>
+											</select>
 										</div>
 									</div>
 
@@ -217,17 +220,17 @@
 											<div class="col-sm-6">
 												<!-- Text input http://getbootstrap.com/css/#forms -->
 												<div class="form-group">
-													<label for="setPressure" class="control-label col-sm-4">Set Pressure</label>
+													<label for="seatPressure" class="control-label col-sm-4">Set Pressure</label>
 													<div class="col-sm-8">
-														<input type="text" class="form-control input-sm" name="setPressure" placeholder="" required="">
+														<input type="text" class="form-control input-sm" name="seatPressure" placeholder="" required="">
 
 													</div>
 												</div>
 												<!-- Fuel UX Select http://getfuelux.com/javascript.html#selectlist -->
 												<div class="form-group">
-													<label class="control-label col-sm-4" for="setPressureUnit">Set Pressure Unit</label>
+													<label class="control-label col-sm-4" for="seatPressureUnit">Set Pressure Unit</label>
 													<div class="controls text-left col-sm-8">
-														<select class="form-control input-sm" name="setPressureUnit">
+														<select class="form-control input-sm" name="seatPressureUnit">
 															<option value="-1">Select one</option>
 															<option value="bar">bar</option>
 															<option value="kgpercm2">Kg/CM^2</option>
@@ -351,6 +354,7 @@
 							<div class="form-group">
 								<label class="col-md-4 control-label" for=""></label>
 								<div class="col-md-8">
+									<input type="hidden" name="current_page" value="{{current_page}}">
 									<button name="submit-cform"  class="btn btn-success">Submit</button>
 									<button name="reset-cform" id="reset-form" class="btn btn-danger" type="reset">Reset</button>
 								</div>
