Adding previous reports and enhancements

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
           <i class="fa fa-dashboard fa-5x"></i><br/>
           Calibrate <br/> Pressure Transducer
         </a>
-        <a href="#" class="btn btn-squared-default btn-success">
+        <a href="/showPreviousReports" class="btn btn-squared-default btn-success">
           <i class="fa fa-bar-chart-o fa-5x"></i><br/>
           See  <br/>Previous results
         </a>
