--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -52,7 +52,7 @@
 
   <script type="text/javascript" src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
   <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
-  	{% if current_page=="RPSLvalves" or current_page=="BTSLvalves"%}
+  	{% if current_page=="RPSLvalves" or current_page=="BTSLvalves" or current_page=="reports"%}
 
 	<script type="text/javascript" src="{{url_for('static',filename='js/jquery.dataTables.min.js')}}"></script>
 	<script type="text/javascript" src="{{url_for('static',filename='js/dataTables.bootstrap.min.js')}}"></script>
