--- a/templates/showReport.html
+++ b/templates/showReport.html
@@ -64,7 +64,7 @@ div#report {
               Certification Number
             </td>
             <td>
-              {{valveTestCard.certificationNumber}}
+              {{valveTR.certificationNumber}}
             </td>
           </tr>
           <tr>
@@ -78,7 +78,7 @@ div#report {
               Creation Date
             </td>
             <td>
-              {{valveTestCard.testDate}}
+              {{valveTR.testDate}}
             </td>
           </tr>
           <tr>
@@ -130,34 +130,34 @@ div#report {
       <table class="table table-bordered table-responsive table-nonfluid">
         <tr>
           <td>
-            DN Inlet(inch/mm) {{valveTechCard.dnInletUnit}}
+            DN Inlet(inch/mm) {{valveTR.dnInletUnit}}
           </td>
-          <td>{{valveTechCard.dnInlet}}</td>
+          <td>{{valveTR.dnInlet}}</td>
         </tr>
         <tr>
           <td>
-            DN Outlet(inch/mm) {{valveTechCard.dnOutletUnit}}
+            DN Outlet(inch/mm) {{valveTR.dnOutletUnit}}
           </td>
-          <td>{{valveTechCard.dnOutlet}}</td>
+          <td>{{valveTR.dnOutlet}}</td>
 
         </tr>
         <tr>
           <td>
-            Set Pressure(bar/kgpercm2) {{valveTechCard.seatPressureUnit}}
+            Set Pressure(bar/kgpercm2) {{valveTR.seatPressureUnit}}
           </td>
-          <td>{{valveTechCard.seatPressure}}</td>
+          <td>{{valveTR.seatPressure}}</td>
         </tr>
         <tr>
           <td>
             Seat diameter(inch/mm)
           </td>
-          <td>{{valveTechCard.seatDiameter}}</td>
+          <td>{{valveTR.seatDiameter}}</td>
         </tr>
         <tr>
           <td>
             A/X measurement(inch/mm)
           </td>
-          <td>{{valveTechCard.axMeasurement}}</td>
+          <td>{{valveTR.axMeasurement}}</td>
         </tr>
 
       </table>
@@ -194,7 +194,7 @@ div#report {
                   Test Medium
               </td>
               <td>
-                {{valveTestCard.testMedium}}
+                {{valveTR.testMedium}}
               </td>
             </tr>
           </tbody>
@@ -224,7 +224,7 @@ div#report {
                 Medium
               </td>
               <td>
-                {{valveTestCard.testMedium}}
+                {{valveTR.testMedium}}
               </td>
             </tr>
           </tbody>
@@ -248,7 +248,7 @@ div#report {
               Inspector
             </td>
             <td>
-              {{valveTestCard.inspector}}
+              {{valveTR.inspector}}
             </td>
           </tr>
           <tr>
@@ -262,7 +262,7 @@ div#report {
               Test Date:
             </td>
             <td>
-              {{valveTestCard.testDate}}
+              {{valveTR.testDate}}
             </td>
           </tr>
           <tr>
@@ -276,7 +276,7 @@ div#report {
               Location of test
             </td>
             <td>
-              {{valveTestCard.testLocation}}
+              {{valveTR.testLocation}}
             </td>
           </tr>
           <tr>
@@ -284,7 +284,7 @@ div#report {
             Surveyor
           </td>
             <td>
-              {{valveTestCard.surveyor}}
+              {{valveTR.surveyor}}
             </td>
           </tr>
         </tbody>
