Adding report enhancement and pressure unit to tests

--- a/templates/showReport.html
+++ b/templates/showReport.html
@@ -1,305 +1,12 @@
 {%extends "layout/header.html"%}
 {%block content%}
-<style media="screen">
-.table-nonfluid {
-   width: auto !important;
-}
-
-@media print{
-  body
-{
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-font-size: 1em;
-color: #333333;
-margin-top: 2cm;
-margin-right: 2cm;
-margin-bottom: 1.5cm;
-margin-left: 2cm
-}
-table{
-  table-layout: fixed;
-word-wrap: break-word;
-}
-
-div#report {
-  margin: 10px 10px 10px 10px;
-  page-break-before: none;
-  page-break-after: none;
-  page-break-inside: avoid;
-}
-}
-@page{size:auto; margin-bottom:5mm;}
-</style>
 <div class="container text-center">
   <div class="row">
-    <button type="button" name="printButton" class="btn btn-primary btn-md pull-right" onclick="printContent('report');"><i class="fa fa-print fa-2x"></i>Print</button>
-    <div id="report" class="print">
     <div class="text-center">
-      <h3>Report Generation: Pressure Safety Valve</h3>
+      <h3>Report Generation</h3>
     </div>
-    <div class="well col-xs-12">
-      <div class="row">
-      <table class="table table-bordered table-striped table-condensed">
-        <tbody>
-          <tr>
-            <td class="col-xs-4 text-center">EFCO Maschinenbau GmbH <br> Otto-Brenner-Str.5-7<br> 52353 Duren </td>
-            <td class="col-xs-4 text-center">Test Report Safety Valves</td>
-            <td class="col-xs-4 text-center"><strong>EFCO INDIA</strong> </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="row">
-      <div class="col-xs-6">
-      <table class="table table-bordered table-striped table-nonfluid">
-        <tbody>
-          <tr>
-            <td class="text-left">
-              Plant
-            </td>
-            <td>
-            {{valve.plant}}
-            </td>
-            <td class="text-right">
-              Certification Number
-            </td>
-            <td>
-              {{valveTR.certificationNumber}}
-            </td>
-          </tr>
-          <tr>
-            <td class="text-left">
-              Valve Type
-            </td>
-            <td>
-              {{valve.valve_type}}
-            </td>
-            <td class="text-right">
-              Creation Date
-            </td>
-            <td>
-              {{valveTR.testDate}}
-            </td>
-          </tr>
-          <tr>
-            <td class="text-left">
-              Valve No.
-            </td>
-            <td>
-              {{valve.valve_id}}
-            </td>
-            <td class="text-right">
-              Customer
-            </td>
-            <td>
-              {{valve.customer}}
-            </td>
-          </tr>
-          <tr>
-            <td class="text-left">
-              Rev No
-            </td>
-            <td>
-              {{valve.rev_no}}
-            </td>
-            <td class="text-right">
-              Application No
-            </td>
-            <td>
-              {{valve.applicationNumber}}
-            </td>
-          </tr>
-          <tr>
-            <td class="text-left">
-              Part No.
-            </td>
-            <td>
-              {{valve.part_no}}
-            </td>
-            <td class="text-right">
-              Manufacturer
-            </td>
-            <td>
-              {{valve.manufacturer}}
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-      <span class="col-xs-6">
-      <table class="table table-bordered table-responsive table-nonfluid">
-        <tr>
-          <td>
-            DN Inlet(inch/mm) {{valveTR.dnInletUnit}}
-          </td>
-          <td>{{valveTR.dnInlet}}</td>
-        </tr>
-        <tr>
-          <td>
-            DN Outlet(inch/mm) {{valveTR.dnOutletUnit}}
-          </td>
-          <td>{{valveTR.dnOutlet}}</td>
-
-        </tr>
-        <tr>
-          <td>
-            Set Pressure(bar/kgpercm2) {{valveTR.seatPressureUnit}}
-          </td>
-          <td>{{valveTR.seatPressure}}</td>
-        </tr>
-        <tr>
-          <td>
-            Seat diameter(inch/mm)
-          </td>
-          <td>{{valveTR.seatDiameter}}</td>
-        </tr>
-        <tr>
-          <td>
-            A/X measurement(inch/mm)
-          </td>
-          <td>{{valveTR.axMeasurement}}</td>
-        </tr>
-
-      </table>
-    </span>
-  </div>
-      <div class="text-center">
-        <p class="lead text-info">
-          Test Status: Pass/Fail
-        </p>
-      </div>
-      <!-- <legend>Technical data</legend> -->
-
-      <div class="col-xs-6">
-        <table class="table table-bordered table-responsive">
-          <tbody>
-            <tr>
-              <td>
-                Target Release Pressure
-              </td>
-              <td>
-                {{targetPressure}}
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Actual Release Pressure
-              </td>
-              <td>
-                {{actualReleasePressure}}
-              </td>
-            </tr>
-            <tr>
-              <td>
-                  Test Medium
-              </td>
-              <td>
-                {{valveTR.testMedium}}
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-xs-6" style="page-break-after:always;">
-        <table class="table table-bordered table-responsive">
-          <tbody>
-            <tr>
-              <td>
-                Target Release Pressure
-              </td>
-              <td>
-                {{targetPressure}}
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Leakage
-              </td>
-              <td>
-                Value
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Medium
-              </td>
-              <td>
-                {{valveTR.testMedium}}
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <legend  class="text-left">Release Pressure and Seat Leakage Test</legend>
-      <img src="http://localhost:5000/static/reports/releasePressure/rpImg.jpg" alt="Release Pressure Graph" style="height:200px"/>
-
-      <img  src="http://localhost:5000/static/reports/rpseatLeakage/slImg.jpg" alt="Seat Leakage Graph" style="height:200px;"/>
-      <br><br>
-      <table class="table table-bordered table-condensed">
-        <tbody>
-          <tr>
-            <td>
-              Comment
-            </td>
-            <td>
-              Value
-            </td>
-            <td>
-              Inspector
-            </td>
-            <td>
-              {{valveTR.inspector}}
-            </td>
-          </tr>
-          <tr>
-            <td>
-
-            </td>
-            <td>
-
-            </td>
-            <td>
-              Test Date:
-            </td>
-            <td>
-              {{valveTR.testDate}}
-            </td>
-          </tr>
-          <tr>
-            <td>
-
-            </td>
-            <td>
-
-            </td>
-            <td>
-              Location of test
-            </td>
-            <td>
-              {{valveTR.testLocation}}
-            </td>
-          </tr>
-          <tr>
-          <td>
-            Surveyor
-          </td>
-            <td>
-              {{valveTR.surveyor}}
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <iframe src="/embedReport/{{certno}}/{{valve_type}}"  height="100%" width="100%" frameborder="0" style="position:absolute;
+    z-index:1;left:0px;"></iframe>
     </div>
 </div>
-  </div>
-</div>
-<script>
-function printContent(el){
-var restorePage = document.body.innerHTML;
-var printContent = document.getElementById(el).innerHTML;
-document.body.innerHTML = printContent;
-window.print();
-document.body.innerHTML = restorePage;
-}
-</script>
 {% endblock %}
