--- a/templates/valves.html
+++ b/templates/valves.html
@@ -303,7 +303,7 @@
 											<div class="form-group">
 												<label for="applicationNumber" class="control-label col-sm-4">Application Number</label>
 												<div class="col-sm-8">
-													<input type="text" class="form-control" name="applicationNumber" placeholder="" required="">
+													<input type="text" class="form-control" name="applicationNumber" id="applicationNumber" placeholder="" required="">
 
 												</div>
 											</div>
