--- a/templates/valveCard.html
+++ b/templates/valveCard.html
@@ -276,8 +276,10 @@
 											<label class="control-label">Unit</label>
 											<select class="form-control input-sm" name="pressureUnit" id="safetyPressureUnit">
 												<option value="-1">Select one</option>
-												<option value="bar" selected>Bar</option>
-												<option value="kgpercm2">Kg/cm^2</option>
+												<option value="1" selected>Bar</option>
+												<option value="2">PSI</option>
+												<option value="3">MPa</option>
+												<option value="4">Kg/cm^2</option>
 											</select>
 										</div>
 									</div>
@@ -304,7 +306,7 @@
 											</div>
 											<div class="form-group">
 												<label class="control-label">Test Duration[sec]</label>
-												<input class="input-sm form-control" id="testDuration" />
+												<input class="input-sm form-control" id="btTime" />
 											</div>
 										</div>
 										<div class="col-md-4">
@@ -316,14 +318,15 @@
 										<div class="col-md-4">
 											<div class="form-group">
 												<label class="control-label">Actual Pressure</label>
-												<input class="input-sm form-control" id="actualPressure" />
+												<input class="input-sm form-control" id="btActualPressure" disabled="disabled" />
 											</div>
 											<div class="form-group">
 												<label class="control-label">Unit</label>
 												<select class="form-control input-sm" name="pressureUnit" id="shutOffPressureUnit">
-													<option value="-1">Select one</option>
-													<option value="bar" selected>Bar</option>
-													<option value="kgpercm2">Kg/cm^2</option>
+													<option value="1" selected>Bar</option>
+													<option value="2">PSI</option>
+													<option value="3">MPa</option>
+													<option value="4">Kg/cm^2</option>
 												</select>
 											</div>
 										</div>
@@ -386,8 +389,13 @@
 									{%endif%}
 									<div class="form-horizontal col-md-4">
 										<div class="form-group">
-											<label class="control-label">Leakage (bubbles/min)</label>
-											<input class="input-sm form-control" name="leakage" id="leakage"/>
+											<label class="control-label">Leakage</label>
+											<input type="text" name="leakage" value="0" id="leakage">
+											<select class="form-control input-sm" name="leakageUnit" id="leakageUnit">
+												<option value="-1">Select one</option>
+												<option value="bpm" selected>Bubbles/min</option>
+												<option value="kgpercm2">Kg/cm2</option>
+											</select>
 										</div>
 									</div>
 									</div>
