--- a/templates/valves.html
+++ b/templates/valves.html
@@ -71,7 +71,7 @@
 				<h4 class="modal-title">Create Valve</h4>
 			</div>
 			<div class="modal-body">
-				<form class="form-horizontal" action="http://localhost:5000/createValve" method="POST">
+				<form class="form-horizontal" action="http://localhost/createValve" method="POST">
 					<fieldset>
 						<div class="panel panel-primary">
 							<div class="panel-heading">
